Added Imgui and connected basic window with proper mouse handle

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -55,6 +55,15 @@
     <ClInclude Include="render\Systems\Pipeline.hpp" />
     <ClInclude Include="render\Systems\RenderStructs.hpp" />
     <ClInclude Include="render\Systems\TransformSystem.hpp" />
+    <ClInclude Include="render\UI\imgui\imconfig.h" />
+    <ClInclude Include="render\UI\imgui\imgui.h" />
+    <ClInclude Include="render\UI\imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="render\UI\imgui\imgui_impl_win32.h" />
+    <ClInclude Include="render\UI\imgui\imgui_internal.h" />
+    <ClInclude Include="render\UI\imgui\imstb_rectpack.h" />
+    <ClInclude Include="render\UI\imgui\imstb_textedit.h" />
+    <ClInclude Include="render\UI\imgui\imstb_truetype.h" />
+    <ClInclude Include="render\UI\UI.hpp" />
     <ClInclude Include="source\dragger\MeshDragger.hpp" />
     <ClInclude Include="source\math\Ray.hpp" />
     <ClInclude Include="source\mesh\Mesh.hpp" />
@@ -91,6 +100,13 @@
     <ClCompile Include="render\Systems\LightSystem.cpp" />
     <ClCompile Include="render\Systems\MeshSystem.cpp" />
     <ClCompile Include="render\Systems\TransformSystem.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui_draw.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui_tables.cpp" />
+    <ClCompile Include="render\UI\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="render\UI\UI.cpp" />
     <ClCompile Include="source\dragger\MeshDragger.cpp" />
     <ClCompile Include="source\math\Ray.cpp" />
     <ClCompile Include="source\utility\utility.cpp" />
