--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClInclude Include="render\Graphics\DXRTVs\BindableDepthBuffer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Systems\ShadowSubSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -372,6 +375,9 @@
       <Filter>Source Files\RayTracer</Filter>
     </ClCompile>
     <ClCompile Include="render\Graphics\DXRTVs\BindableDepthBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="render\Systems\ShadowSubSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
