--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -480,6 +480,8 @@
     <FxCompile Include="render\Graphics\shaders\shadow_compute\GSCubemapShadow.hlsl" />
     <FxCompile Include="render\Graphics\shaders\dissolution\VSDissolution.hlsl" />
     <FxCompile Include="render\Graphics\shaders\dissolution\PSDissolution.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\particles\VSParticle.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\particles\PSParticle.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="render\Graphics\shaders\normal\BasicColorStructs.hlsli">
