--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -483,6 +483,7 @@
     <FxCompile Include="render\Graphics\shaders\particles\VSParticle.hlsl" />
     <FxCompile Include="render\Graphics\shaders\particles\PSParticle.hlsl" />
     <FxCompile Include="render\Graphics\shaders\normal\PSBasicColorDeferred.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\dissolution\PSDissolutionDeferred.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="render\Graphics\shaders\normal\BasicColorStructs.hlsli">
